# named_tuples

./: CMakeLists.txt  LICENCE  README.md  json_encoder.h  named_tuple.h  typelist.h
tests/: CMakeLists.txt  unit.cpp
